project(source)

include_directories(include)

set(HEADER_FILES
        include/list_node.h
        include/list_node.cc
        include/tree_node.h
        include/algorithm/Search.cc
        include/algorithm/Search.h
        include/next_tree_node.h

        leetcode_src/0000/01.h
        leetcode_src/0000/02.h
        leetcode_src/0000/21.h
        leetcode_src/0000/24.h
        leetcode_src/0000/53.h
        leetcode_src/0100/121.h
        leetcode_src/0100/122.h
        leetcode_src/0300/331.h
        leetcode_src/0600/605.h
        leetcode_src/1300/1333.h
        leetcode_src/2100/2136.h
        leetcode_src/2200/2251.h
        leetcode_src/2200/2264.h
        leetcode_src/1900/1921.h
        leetcode_src/0200/215.h
        leetcode_src/0300/337.h
        leetcode_src/1300/1333.h
        leetcode_src/0300/344.h
        leetcode_src/0600/617.h
        leetcode_src/0700/722.h
        leetcode_src/0800/833.h
        leetcode_src/0900/980.h
        leetcode_src/1200/1281.h
        leetcode_src/1200/1289.h
        leetcode_src/1400/1444.h
        leetcode_src/1500/1572.h
        leetcode_src/1700/1749.h
        leetcode_src/2300/2337.h
        leetcode_src/2500/2560.h
        leetcode_src/2500/2582.h
        leetcode_src/2500/2591.h
        leetcode_src/2600/2603.h
        leetcode_src/2600/2682.h
        leetcode_src/lcp/06.h
        leetcode_src/1800/1857.h
        leetcode_src/0100/123.h
        leetcode_src/0300/309.h
        leetcode_src/0700/714.h
        leetcode_src/2000/2034.h
        leetcode_src/2500/2578.h
        leetcode_src/2700/2731.h
        leetcode_src/2500/2512.h
        leetcode_src/0100/188.h
        leetcode_src/2500/2562.h
        leetcode_src/1400/1488.h
        leetcode_src/0100/136.h
        leetcode_src/0100/137.h
        leetcode_src/0600/673.h
        leetcode_src/0300/300.h
        leetcode_src/0200/260.h
        leetcode_src/2600/2652.h
        leetcode_src/2500/2530.h
        leetcode_src/1500/1559.h
        leetcode_src/1700/1726.h
        leetcode_src/lcp/50.h
        leetcode_src/0400/449.h
        leetcode_src/0200/297.h
        leetcode_src/2200/2235.h
        leetcode_src/2500/2525.h
        leetcode_src/0000/03.h
        leetcode_src/1400/1402.h
        leetcode_src/2600/2678.h
        leetcode_src/0000/04.h
        leetcode_src/1100/1155.h
        leetcode_src/2600/2698.h
        leetcode_src/2500/2520.h
        leetcode_src/1400/1465.h
        leetcode_src/2500/2558.h
        leetcode_src/0000/05.h
        leetcode_src/0200/274.h
        leetcode_src/0000/06.h
        leetcode_src/0200/275.h
        leetcode_src/0000/07.h
        leetcode_src/2000/2003.h
        leetcode_src/0000/08.h
        leetcode_src/2100/2127.h
        leetcode_src/0000/09.h
        leetcode_src/2100/2103.h
        leetcode_src/0000/10.h
        leetcode_src/0000/11.h
        leetcode_src/0400/421.h
        leetcode_src/0100/187.h
        leetcode_src/0000/12.h
        leetcode_src/0300/318.h
        leetcode_src/0000/13.h
        leetcode_src/2500/2586.h
        leetcode_src/0000/14.h
        leetcode_src/2600/2609.h
        leetcode_src/0000/15.h
        leetcode_src/2200/2258.h
        leetcode_src/0000/16.h
        leetcode_src/2300/2300.h
        leetcode_src/0000/17.h
        leetcode_src/0700/765.h
        leetcode_src/0700/715.h
        leetcode_src/0300/307.h
        leetcode_src/1300/1334.h
        leetcode_src/2600/2656.h
        leetcode_src/0000/18.h
        leetcode_src/2700/2760.h
        leetcode_src/2300/2342.h
        leetcode_src/0600/689.h
        leetcode_src/0000/19.h
        leetcode_src/0500/504.h
        leetcode_src/0000/20.h
        leetcode_src/0200/273.h
        leetcode_src/2200/2216.h
        leetcode_src/1400/1410.h
        leetcode_src/2800/2824.h
        leetcode_src/0200/289.h
        leetcode_src/1400/1457.h
        leetcode_src/0800/828.h
        leetcode_src/0900/907.h
        leetcode_src/1600/1670.h
        leetcode_src/2300/2336.h
        leetcode_src/1600/1657.h
        leetcode_src/0000/22.h
        leetcode_src/0000/23.h
        leetcode_src/2600/2661.h
        leetcode_src/0000/25.h
        leetcode_src/1000/1094.h
        leetcode_src/0000/26.h
        leetcode_src/1400/1423.h
        leetcode_src/1000/1038.h
        leetcode_src/0000/27.h
        leetcode_src/2400/2477.h
        leetcode_src/2600/2646.h
        leetcode_src/1400/1466.h
        leetcode_src/2000/2008.h
        leetcode_src/2000/2048.h
)

add_library(${PROJECT_NAME} STATIC ${HEADER_FILES})
